@@ -142,11 +142,23 @@
             <scope>compile</scope>
         </dependency>
 
+        <dependency>
+            <groupId>io.github.woodser</groupId>
+            <artifactId>monero-java</artifactId>
+            <version>0.8.43</version>  <!-- update to current -->
+        </dependency>
+
         <!-- Test dependencies -->
         <dependency>
             <groupId>org.junit.jupiter</groupId>
             <artifactId>junit-jupiter</artifactId>
             <version>5.14.3</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.mockito</groupId>
+            <artifactId>mockito-core</artifactId>
+            <version>5.17.0</version>
             <scope>test</scope>
         </dependency>
     </dependencies>
@@ -206,6 +218,7 @@
                 <configuration>
                     <forkCount>2</forkCount>
                     <reuseForks>true</reuseForks>
+                    <argLine>-Dnet.bytebuddy.experimental=true</argLine>
                 </configuration>
             </plugin>
         </plugins>
